<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/modificar"
    tools:context=".Modificar">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="modificar"
        android:text="@string/bottonmodificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/spinner_pesos_mid" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="84dp"
        android:onClick="eliminar"
        android:text="@string/bottoneliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_pesos_mid" />

    <TextView
        android:id="@+id/canmod"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pesosmodificar"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/tv_pesosmodificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_miles_mod" />

    <TextView
        android:id="@+id/tv_milesmodificar"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/tv_milesmodificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cantidadmodificar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/cantactual"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_miles_mod"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cantidad_mod" />

    <EditText
        android:id="@+id/et_nombremodificar"
        android:layout_width="289dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_input_anadir"
        android:drawableStart="@drawable/shuffle"
        android:drawablePadding="12dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/nombreproducto"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_pesos_mid"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_miles_mod" />

    <TextView
        android:id="@+id/preciomod"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cantidadmodificar"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/tv_modificarcantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombremodificar" />

    <Spinner
        android:id="@+id/spinner_cantidad_mod"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombremodificar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/precio_actual"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/canmod"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="36dp"
        android:text="@string/cincuenta"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pesosmodificar"
        app:layout_constraintVertical_bias="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>