<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anadir"
    android:background="@drawable/fondoanadir"
    android:id="@+id/aviso_informacion">


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input_anadir"
        android:drawableStart="@drawable/shopping_cart"
        android:drawablePadding="12dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/nombreproducto"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="agregar"
        android:text="@string/buttonagregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <TextView
        android:id="@+id/tv_preciomiles"
        android:layout_width="188dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/tv_preciomiles"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/tv_cantidad"
        android:layout_width="193dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/tv_cantidad"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <TextView
        android:id="@+id/tv_preciopesos"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tv_preciopesos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_input_anadir"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <LinearLayout
        android:id="@+id/snack1"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:layout_marginTop="620dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/cincuenta"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_preciopesos" />

</androidx.constraintlayout.widget.ConstraintLayout>