<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verdurass"
    tools:context=".modificarpeso"
    android:id="@+id/aviso_informacionn">

    <EditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nombrepesomod"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_input_anadir"
        android:drawableStart="@drawable/verdutapeso"
        android:drawablePadding="12dp"
        android:elevation="15dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nombreproducto"
        android:importantForAutofill="no"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pesokilomod"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/custom_input_anadir"

        android:drawableStart="@drawable/kilo"
        android:drawablePadding="12dp"
        android:elevation="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pesonetomod"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_input_anadir"
        android:drawableStart="@drawable/gramo"
        android:drawablePadding="12dp"
        android:elevation="15dp"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/pesokilomod" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="69dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:text="@string/precioxkilo"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/peso"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="76dp"
        android:onClick="modificarbotton"
        android:text="@string/bottonmodificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pesonetomod" />

    <LinearLayout
        android:id="@+id/snack1"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:layout_marginTop="620dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:onClick="eliminarpesobotton"
        android:text="@string/bottoneliminar"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>